# ConsoleUtils

./: CMakeLists.txt  README.md
cmake/: ConsoleUtilsConfig.cmake
include/ConsoleUtils/: ArgType.h  ConsoleInterface.h  ParamHandler.h  ParamParser.h  ParamResult.h  ParameterValues.h  PatternToken.h  Question.h  SimpleParamParser.h  SimpleParamResult.h
include/ConsoleUtils/ConstExpr/: Pattern.h  StringUtils.h  TokenUtils.h
src/: ArgType.cpp  ArgType.h  ConsoleInterface.cpp  Discovery.cpp  Discovery.h  InputParser.cpp  InputParser.h  InputToken.h  InputTokenizer.cpp  InputTokenizer.h  ParamHandler.cpp  ParamParser.cpp  ParamResult.cpp  PatternParser.cpp  PatternParser.h  PatternToken.cpp  PatternToken.h  PatternTokenizer.cpp  PatternTokenizer.h  PatternValidator.cpp  PatternValidator.h  Question.cpp  SimpleParamParser.cpp  SimpleParamResult.cpp  StringUtils.cpp  StringUtils.h  TokenUtils.cpp  TokenUtils.h
src/ParamPattern/: PatternParser.cpp  PatternParser.h  PatternToken.h
test/: ArgTypeTest.cpp  CMakeLists.txt  InputTokenizerTest.cpp  ParamHandlerTest.cpp  ParamParserTest.cpp  PatternParserTest.cpp  PatternTokenizerTest.cpp  SimpleParamParserTest.cpp  StringUtilsTest.cpp  TokenUtilsTest.cpp
test/ConstExpr/: StringTests.cpp
test/ParamPattern/: PatternParserTest.cpp
test/cli/: main.cpp
